--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,3 +2,64 @@
   color: #abc123;
 }
 
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: #ec1414;
+  background-color: rgba(0, 0, 0, 0.4);
+  padding-top: 185px;
+}
+
+.model-content {
+  background-color: #eeeeee;
+  margin: 5px auto;
+  color: #0e0e0e;
+  border-radius: 5px;
+  /*border: 1px solid #888;*/
+}
+
+.animate {
+  -webkit-animation: animatezoom 0.6s;
+  animation: animatezoom 0.6s;
+}
+
+@-webkit-keyframes animatezoom {
+  from {
+    -webkit-transform: scale(0);
+  }
+
+  to {
+    -webkit-transform: scale(1);
+  }
+}
+
+@keyframes animatezoom {
+  from {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+
+  to {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+.text-box {
+  background-color: inherit;
+  outline: none;
+  border: 0;
+  border-bottom: 1px solid #a6a6a6;
+  width: 100%;
+  height: 34px;
+  font-size: 17px;
+  font-weight: bolder;
+  line-height: 1.42857143;
+}
+
