--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -11,4 +11,55 @@ $primary-color: #abc123;
     color: $primary-color;
 }
 
+.modal{
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(236, 20, 20);
+    background-color: rgba(0,0,0,0.4);
+    padding-top: 185px;
+} 
+
+.model-content{
+    background-color: rgb(238, 238, 238);
+    margin: 5px auto;
+    color: #0e0e0e;
+    border-radius: 5px;
+    /*border: 1px solid #888;*/
+}
+
+.animate{
+    -webkit-animation: animatezoom 0.6s;
+    animation: animatezoom 0.6s;
+}
+
+@-webkit-keyframes animatezoom{
+    from {-webkit-transform: scale(0)}
+    to {-webkit-transform: scale(1)}
+}
+
+@keyframes animatezoom{
+    from {transform: scale(0)}
+    to {transform: scale(1)}
+}
+
+
+
+.text-box{
+    background-color: inherit;
+    outline: none;
+    border: 0;
+    border-bottom: 1px solid rgb(166, 166, 166);
+    width: 100%;
+    height: 34px;
+    font-size: 17px;
+    font-weight: bolder;
+    line-height: 1.42857143;
+  }
+
 
