Added styles for new nav and added meanmenu css

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,16 @@
-@import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);.test {
-  color: #abc123;
+@import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);@font-face {
+  font-family: MacFont;
+  src: url("/fonts/system_san_francisco_display_thin-webfont.woff2");
+  font-weight: normal;
+  font-style: normal;
+}
+
+html, body {
+  font-family: MacFont;
+}
+
+#container-content {
+  padding-top: 55px;
 }
 
 .modal {
