--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5,12 +5,13 @@
   font-style: normal;
 }
 
-html, body {
+body {
   font-family: MacFont;
+  font-size: 20px;
 }
 
 #container-content {
-  padding-top: 55px;
+  padding-top: 100px;
 }
 
 .modal {
@@ -72,5 +73,9 @@ html, body {
   font-size: 17px;
   font-weight: bolder;
   line-height: 1.42857143;
+}
+
+.a-pointer {
+  cursor: pointer;
 }
 
