--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -5,7 +5,7 @@
 
 header nav {
   text-align: center;
-  background: rgba(14, 14, 14, 0.4);
+  background: rgba(14, 14, 14, 0);
 }
 
 header nav ul {
@@ -21,9 +21,32 @@ header nav ul li {
 
 header nav ul li:first-child {
   margin-left: 0;
+  border-right: 1px solid #e9e9e9;
 }
 
 header nav ul li ul {
   display: none;
+}
+
+header nav a {
+  color: #e9e9e9;
+  margin-right: 20px;
+}
+
+header nav a:hover {
+  color: #ababab;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+header nav a,
+header nav a:hover {
+  -webkit-transition: color 0.25s ease-in;
+  transition: color 0.25s ease-in;
+}
+
+header nav a:visited,
+header nav a:link {
+  text-decoration: none;
 }
 
