--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -17,14 +17,16 @@
 }
 
 $font-stack: MacFont;
+$default-font-size: 20px;
 
 body{
     font-family: $font-stack;
+    font-size: $default-font-size;
 }
 
 
 #container-content{
-    padding-top: 55px;
+    padding-top: 100px;
 }
 
 .modal{
@@ -76,6 +78,10 @@ body{
     font-size: 17px;
     font-weight: bolder;
     line-height: 1.42857143;
-  }
+}
+
+.a-pointer{
+    cursor: pointer;
+}
 
 
