UPDATE: Too much word done and was a while ago so forgot what I did, so now I'm mass commiting

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -79,3 +79,12 @@ body {
   cursor: pointer;
 }
 
+a:not([href]):not([tabindex]) {
+  color: #009cbe;
+}
+
+#mtbMap {
+  height: 400px;
+  width: 100%;
+}
+
