--- a/public/css/meanmenu.css
+++ b/public/css/meanmenu.css
@@ -17,7 +17,7 @@ a.meanmenu-reveal {
 .mean-container .mean-bar {
 	float: left;
 	width: 100%;
-	position: relative;
+	position: fixed;
 	background: rgba(14, 14, 14, 0.4);
 	padding: 4px 0;
 	min-height: 42px;
