--- a/resources/assets/sass/nav.scss
+++ b/resources/assets/sass/nav.scss
@@ -30,6 +30,14 @@ header {
             display: none;
         }
 
+        a:not([href]):not([tabindex]) {
+            color: #e9e9e9;
+            text-decoration: none;
+        }
+        a:not([href]):not([tabindex]):hover {
+            color: #ababab;
+            text-decoration: none;
+        }
         a{
             color: #e9e9e9;
             margin-right: 20px;
@@ -44,6 +52,10 @@ header {
         }
         a:visited, a:link{
             text-decoration: none;
+        }
+
+        .dropdown{
+            display: inline;
         }
         
     }
