--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -92,8 +92,23 @@ a:not([href]):not([tabindex]) {
 }
 
 #mtbMap{
+    padding: 20px 20px 20px 0;
+    width: 400px;
     height: 400px;
-    width: 100%;
+    border-radius: 100%;
+    margin-top: 90px;
+    margin-left: 45px;
+    z-index: 0;
+}
+
+#roadMap{
+    padding: 20px 20px 20px 0;
+    width: 400px;
+    height: 400px;
+    border-radius: 100%;
+    margin-top: 90px;
+    margin-left: 45px;
+    z-index: 0;
 }
 
 
