--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -16,17 +16,20 @@
 
 }
 
-$font-stack: MacFont;
+$font: MacFont;
 $default-font-size: 20px;
 
 body{
-    font-family: $font-stack;
+    font-family: $font;
     font-size: $default-font-size;
+    background-color: rgb(238, 238, 238);
 }
 
-
-#container-content{
-    padding-top: 100px;
+.well-custom{
+    min-height: 20px;
+    padding: 19px;
+    margin-bottom: 20px;
+    background-color: #f5f5f5;
 }
 
 .modal{
@@ -91,24 +94,16 @@ a:not([href]):not([tabindex]) {
     color: rgb(0, 156, 190);
 }
 
-#mtbMap{
+.circle-map{
     padding: 20px 20px 20px 0;
     width: 400px;
     height: 400px;
     border-radius: 100%;
     margin-top: 90px;
-    margin-left: 45px;
     z-index: 0;
 }
 
-#roadMap{
-    padding: 20px 20px 20px 0;
-    width: 400px;
-    height: 400px;
-    border-radius: 100%;
-    margin-top: 90px;
-    margin-left: 45px;
-    z-index: 0;
+.thick-line{
+    border: 2px solid rgb(91, 91, 91);
 }
-
 
