Added margin bottom to navbar

--- a/resources/assets/sass/nav.scss
+++ b/resources/assets/sass/nav.scss
@@ -4,6 +4,7 @@ $nav-background: rgba(14, 14, 14, 0);
     // text-align: center;
     background-color: rgba(14, 14, 14, 0.4);
     border-style: none;
+    margin-bottom: 50px;
 }
 
 header {
