--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8,10 +8,14 @@
 body {
   font-family: MacFont;
   font-size: 20px;
+  background-color: #eeeeee;
 }
 
-#container-content {
-  padding-top: 100px;
+.well-custom {
+  min-height: 20px;
+  padding: 19px;
+  margin-bottom: 20px;
+  background-color: #f5f5f5;
 }
 
 .modal {
@@ -83,8 +87,16 @@ a:not([href]):not([tabindex]) {
   color: #009cbe;
 }
 
-#mtbMap {
+.circle-map {
+  padding: 20px 20px 20px 0;
+  width: 400px;
   height: 400px;
-  width: 100%;
+  border-radius: 100%;
+  margin-top: 90px;
+  z-index: 0;
+}
+
+.thick-line {
+  border: 2px solid #5b5b5b;
 }
 
