--- a/resources/assets/sass/nav.scss
+++ b/resources/assets/sass/nav.scss
@@ -5,6 +5,7 @@ $nav-background: rgba(14, 14, 14, 0);
     background-color: rgba(14, 14, 14, 0.4);
     border-style: none;
     margin-bottom: 50px;
+    padding: 0;
 }
 
 header {
