--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -268,6 +268,18 @@ a:not([href]):not([tabindex]) {
     display: inline;
 }
 
+.input-error-message{
+    color: red;
+    display: block;
+    font-size: 0.8em;
+    margin-top: 10px;
+}
+
+.input-error{
+    border-bottom-color: red;
+}
+
+
 .modal-header h3 {
     margin-top: 0;
 }
