--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -28,6 +28,43 @@ body.model-open {
     overflow: hidden;
 }
 
+a {
+    color: #e9e9e9;
+}
+
+a:hover {
+    color: #ababab;
+    text-decoration: none;
+}
+
+a,
+a:hover {
+    -o-transition: color 0.25s ease-in;
+    -webkit-transition: color 0.25s ease-in;
+    -moz-transition: color 0.25s ease-in;
+    transition: color 0.25s ease-in;
+}
+
+a:focus {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:active {
+    text-decoration: none;
+}
+
+a.non-nav {
+    color: rgb(14, 14, 14);
+}
+
+a.non-nav:hover {
+    color: rgb(0, 160, 195);
+}
+
 #app {
     height: 100%;
 }
@@ -57,6 +94,59 @@ body.model-open {
 #upcoming-races-carousel {
     margin-bottom: 50px;
 }
+
+#upcoming-races-list {
+    display: grid;
+    grid-template-columns: auto auto auto;
+}
+
+#upcoming-races-header {
+    text-align: center;
+    margin-bottom: 2%;
+}
+
+.event-box {
+    display: flex;
+    width: 70%;
+    height: 80px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    padding-top: 1px;
+    margin-top: 10px;
+    border-bottom: 1px solid;
+
+    h3{
+        font-size: 24px;
+    }
+}
+
+.close-date{
+    font-weight: 900;
+    color: rgb(255, 182, 182);
+}
+
+.race-date {
+    // position: absolute;
+    // left: 15px;
+    /*font-weight:900;*/
+    font-size: 30px;
+    color: rgb(150, 150, 150);
+}
+
+.race-date em {
+    font-style: normal;
+    font-weight: normal;
+    display: block;
+    font-size: 14px;
+}
+
+.race-info{
+    width: 100%;
+    padding-left: 4%;
+    padding-top: 1%;
+}
+
+
 
 .fill {
     width: 100%;
@@ -136,7 +226,7 @@ body.model-open {
     }
 }
 
-%ukce-btn-shared{
+%ukce-btn-shared {
     padding: 0.05rem 2.5rem;
     background: transparent;
     font-size: 1.3rem;
@@ -159,14 +249,13 @@ body.model-open {
     border: 2px solid #fff;
 }
 
-
-
-.ukce-btn:hover, .ukce-btn-dark:hover {
-
+.ukce-btn:hover,
+.ukce-btn-dark:hover {
     color: #ababab;
     text-decoration: none;
     cursor: pointer;
 }
+
 .ukce-btn-dark {
     // width: 298px;
     // height: 70px;
@@ -231,28 +320,32 @@ a:not([href]):not([tabindex]) {
     width: 45%;
 }
 
-.modal-body{
+.modal-body {
     display: grid;
     grid-column-gap: 70px;
 }
 
-#reg-name-input{ 
+#reg-name-input {
     grid-column-start: 1;
     grid-column-end: 2;
 }
-#reg-username-input{
+
+#reg-username-input {
     grid-column-start: 2;
     grid-column-end: 2;
 }
-#reg-email-input{
+
+#reg-email-input {
     grid-column-start: 1;
     grid-column-end: 3;
 }
-#reg-password-input{
+
+#reg-password-input {
     grid-column-start: 1;
     grid-column-end: 2;
 }
-#reg-passwordconf-input{
+
+#reg-passwordconf-input {
     grid-column-start: 2;
     grid-column-end: 2;
 }
@@ -264,27 +357,26 @@ a:not([href]):not([tabindex]) {
     padding: 0.5rem;
 }
 
-.error-message{
+.error-message {
     display: inline;
 }
 
-.input-error-message{
+.input-error-message {
     color: red;
     display: block;
     font-size: 0.8em;
     margin-top: 10px;
 }
 
-.input-error{
+.input-error {
     border-bottom-color: red;
 }
-
 
 .modal-header h3 {
     margin-top: 0;
 }
 
-.modal-footer{
+.modal-footer {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -322,4 +414,15 @@ a:not([href]):not([tabindex]) {
 .modal-enter .modal-container {
     -webkit-transform: scale(1.1);
     transform: scale(1.1);
+}
+
+.circle-map {
+    padding: 20px 20px 20px 0;
+    width: 400px;
+    height: 400px;
+    border-radius: 100%;
+    margin-top: 90px;
+    z-index: 0;
+    position: relative;
+    overflow: hidden;
 }
