--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17,6 +17,45 @@ body {
   overflow-x: hidden;
 }
 
+body.model-open {
+  overflow: hidden;
+}
+
+a {
+  color: #e9e9e9;
+}
+
+a:hover {
+  color: #ababab;
+  text-decoration: none;
+}
+
+a,
+a:hover {
+  -webkit-transition: color 0.25s ease-in;
+  transition: color 0.25s ease-in;
+}
+
+a:focus {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+a:active {
+  text-decoration: none;
+}
+
+a.non-nav {
+  color: #0e0e0e;
+}
+
+a.non-nav:hover {
+  color: #00a0c3;
+}
+
 #app {
   height: 100%;
 }
@@ -45,6 +84,57 @@ body {
 
 #upcoming-races-carousel {
   margin-bottom: 50px;
+}
+
+#upcoming-races-list {
+  display: grid;
+  grid-template-columns: auto auto auto;
+}
+
+#upcoming-races-header {
+  text-align: center;
+  margin-bottom: 2%;
+}
+
+.event-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 70%;
+  height: 80px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+  padding-top: 1px;
+  margin-top: 10px;
+  border-bottom: 1px solid;
+}
+
+.event-box h3 {
+  font-size: 24px;
+}
+
+.close-date {
+  font-weight: 900;
+  color: #ffb6b6;
+}
+
+.race-date {
+  /*font-weight:900;*/
+  font-size: 30px;
+  color: #969696;
+}
+
+.race-date em {
+  font-style: normal;
+  font-weight: normal;
+  display: block;
+  font-size: 14px;
+}
+
+.race-info {
+  width: 100%;
+  padding-left: 4%;
+  padding-top: 1%;
 }
 
 .fill {
@@ -129,32 +219,38 @@ body {
   }
 }
 
-.custom-btn {
-  width: 100px;
-  height: 70px;
-  color: white;
+.ukce-btn,
+.ukce-btn-dark {
+  padding: 0.05rem 2.5rem;
   background: transparent;
-  border: 2px solid #0e0e0e;
-  font-size: 26px;
+  font-size: 1.3rem;
   text-transform: uppercase;
   text-align: center;
   font-weight: 200;
   line-height: 66px;
   display: inline-block;
   margin-top: 20px;
-  margin-bottom: 45px;
   -webkit-transition: background 0.5s ease;
   transition: background 0.5s ease;
   -webkit-transition: color 0.5s ease;
   transition: color 0.5s ease;
 }
 
-.custom-btn:hover {
-  width: 100%;
-  height: 70px;
-  color: #eeeeee;
-  background: #0e0e0e;
-  border: 2px solid #0e0e0e;
+.ukce-btn {
+  color: #fff;
+  border: 2px solid #fff;
+}
+
+.ukce-btn:hover,
+.ukce-btn-dark:hover {
+  color: #ababab;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.ukce-btn-dark {
+  color: #000;
+  border: 2px solid #000;
 }
 
 .text-box {
@@ -188,5 +284,135 @@ a:not([href]):not([tabindex]) {
 
 .thick-line {
   border: 2px solid #5b5b5b;
+}
+
+.modal-mask {
+  display: block;
+  position: fixed;
+  z-index: 20000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: black;
+  background-color: rgba(0, 0, 0, 0.4);
+  -webkit-transition: opacity .3s ease;
+  transition: opacity .3s ease;
+}
+
+.modal-container {
+  background-color: #fefefe;
+  margin: 5% auto;
+  padding: 1% 2%;
+  border: 1px solid #888;
+  width: 45%;
+}
+
+.modal-body {
+  display: grid;
+  grid-column-gap: 70px;
+}
+
+#reg-name-input {
+  grid-column-start: 1;
+  grid-column-end: 2;
+}
+
+#reg-username-input {
+  grid-column-start: 2;
+  grid-column-end: 2;
+}
+
+#reg-email-input {
+  grid-column-start: 1;
+  grid-column-end: 3;
+}
+
+#reg-password-input {
+  grid-column-start: 1;
+  grid-column-end: 2;
+}
+
+#reg-passwordconf-input {
+  grid-column-start: 2;
+  grid-column-end: 2;
+}
+
+.error {
+  display: inline;
+  color: #a94442;
+  background-color: #f2dede;
+  padding: 0.5rem;
+}
+
+.error-message {
+  display: inline;
+}
+
+.input-error-message {
+  color: red;
+  display: block;
+  font-size: 0.8em;
+  margin-top: 10px;
+}
+
+.input-error {
+  border-bottom-color: red;
+}
+
+.modal-header h3 {
+  margin-top: 0;
+}
+
+.modal-footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: center;
+  padding: 0.5rem;
+  border-top: 1px solid #e9ecef;
+}
+
+.modal-default-button {
+  float: right;
+}
+
+/*
+   * The following styles are auto-applied to elements with
+   * transition="modal" when their visibility is toggled
+   * by Vue.js.
+   *
+   * You can easily play with the modal transition by editing
+   * these styles.
+   */
+
+.modal-enter {
+  opacity: 0;
+}
+
+.modal-leave-active {
+  opacity: 0;
+}
+
+.modal-enter .modal-container {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
+.circle-map {
+  padding: 20px 20px 20px 0;
+  width: 400px;
+  height: 400px;
+  border-radius: 100%;
+  margin-top: 90px;
+  z-index: 0;
+  position: relative;
+  overflow: hidden;
 }
 
