--- a/public/css/meanmenu.css
+++ b/public/css/meanmenu.css
@@ -30,7 +30,7 @@ a.meanmenu-reveal {
 	padding: 13px 13px 11px 13px;
 	position: absolute;
 	top: 0;
-	right: 0;
+	right: 10px !important;
 	cursor: pointer;
 	color: #fff;
 	text-decoration: none;
