--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -19,10 +19,11 @@
 $font: MacFont;
 $default-font-size: 20px;
 
-body{
+html, body{
     font-family: $font;
     font-size: $default-font-size;
     background-color: rgb(238, 238, 238);
+    height: 100%;
 }
 
 .well-custom{
@@ -106,4 +107,399 @@ a:not([href]):not([tabindex]) {
 .thick-line{
     border: 2px solid rgb(91, 91, 91);
 }
+
+
+body.model-open {
+    overflow: hidden;
+}
+
+a {
+    color: rgb(0, 156, 195);
+}
+
+a:hover {
+    color: #ababab;
+    text-decoration: none;
+}
+
+a,
+a:hover {
+    -o-transition: color 0.25s ease-in;
+    -webkit-transition: color 0.25s ease-in;
+    -moz-transition: color 0.25s ease-in;
+    transition: color 0.25s ease-in;
+}
+
+a:focus {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:active {
+    text-decoration: none;
+}
+
+a.non-nav {
+    color: rgb(14, 14, 14);
+}
+
+a.non-nav:hover {
+    color: rgb(0, 160, 195);
+}
+
+#app {
+    height: 100%;
+}
+
+#home-page {
+    height: 100%;
+}
+
+.well-custom {
+    min-height: 20px;
+    padding: 19px;
+    margin-bottom: 20px;
+    background-color: #f5f5f5;
+}
+
+.navbar {
+    background-color: rgba(14, 14, 14, 0.4);
+    border-style: none;
+    position: absolute;
+    z-index: 10000;
+    left: -15%;
+    width: 130%;
+}
+
+.inline-header {
+    position: absolute;
+    z-index: 20000;
+    width: 100%;
+}
+
+#upcoming-races-carousel {
+    margin-bottom: 50px;
+}
+
+#upcoming-races-list {
+    display: grid;
+    grid-template-columns: auto auto auto;
+}
+
+#upcoming-races-header {
+    text-align: center;
+    margin-bottom: 2%;
+}
+
+.event-box {
+    display: flex;
+    width: 70%;
+    height: 80px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    padding-top: 1px;
+    margin-top: 10px;
+    border-bottom: 1px solid;
+
+    h3{
+        font-size: 24px;
+    }
+}
+
+.close-date{
+    font-weight: 900;
+    color: rgb(255, 182, 182);
+}
+
+.race-date {
+    // position: absolute;
+    // left: 15px;
+    /*font-weight:900;*/
+    font-size: 30px;
+    color: rgb(150, 150, 150);
+}
+
+.race-date em {
+    font-style: normal;
+    font-weight: normal;
+    display: block;
+    font-size: 14px;
+}
+
+.race-info{
+    width: 100%;
+    padding-left: 4%;
+    padding-top: 1%;
+}
+
+
+
+.fill {
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+
+.mtb-image {
+    // background-image: url('../../../public/images/mtb.jpg');
+    background-image: url('/images/mtb.jpg');
+}
+
+.road-image {
+    // background-image: url('../../../images/road.jpg');
+    background-image: url('/images/road.jpg');
+    // background-image: url('../../../public/images/road.jpg')
+}
+
+#carousel {
+    height: 100%;
+}
+
+.center-carousel-btns {
+    height: 80%;
+}
+
+.carousel-control-prev {
+    background-image: linear-gradient(to left, rgba(0, 0, 0, .0001) 0, rgba(0, 0, 0, .5) 100%);
+}
+
+.carousel-control-next {
+    background-image: linear-gradient(to right, rgba(0, 0, 0, .0001) 0, rgba(0, 0, 0, .5) 100%);
+}
+
+.carousel-indicators {
+    height: 20%;
+}
+
+.carousel-inner {
+    height: 80%;
+}
+
+.carousel-item {
+    height: 100%;
+}
+
+.carousel-caption {
+    text-shadow: 0 1px 2px rgba(0, 0, 0, .6);
+    top: 40%;
+}
+
+.upcoming-race-text {
+    font-size: 1.8em;
+}
+
+.animate {
+    -webkit-animation: animatezoom 0.6s;
+    animation: animatezoom 0.6s;
+}
+
+@-webkit-keyframes animatezoom {
+    from {
+        -webkit-transform: scale(0)
+    }
+    to {
+        -webkit-transform: scale(1)
+    }
+}
+
+@keyframes animatezoom {
+    from {
+        transform: scale(0)
+    }
+    to {
+        transform: scale(1)
+    }
+}
+
+%ukce-btn-shared {
+    padding: 0.05rem 2.5rem;
+    background: transparent;
+    font-size: 1.3rem;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: 200;
+    line-height: 66px;
+    display: inline-block;
+    margin-top: 20px;
+    transition: background 0.5s ease;
+    transition: color 0.5s ease;
+}
+
+.ukce-btn {
+    // width: 298px;
+    // height: 70px;
+    // padding: .375rem .75rem;
+    @extend %ukce-btn-shared;
+    color: #fff;
+    border: 2px solid #fff;
+}
+
+.ukce-btn:hover,
+.ukce-btn-dark:hover {
+    color: #ababab;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.ukce-btn-dark {
+    // width: 298px;
+    // height: 70px;
+    // padding: .375rem .75rem;
+    @extend %ukce-btn-shared;
+    color: #000;
+    border: 2px solid #000;
+}
+
+.text-box {
+    background-color: inherit;
+    outline: none;
+    border: 0;
+    border-bottom: 1px solid rgb(166, 166, 166);
+    width: 100%;
+    height: 34px;
+    font-size: 17px;
+    font-weight: bolder;
+    line-height: 1.42857143;
+}
+
+.a-pointer {
+    cursor: pointer;
+}
+
+
+.modal-mask {
+    display: block;
+    position: fixed;
+    z-index: 20000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+    transition: opacity .3s ease;
+}
+
+.modal-container {
+    background-color: #fefefe;
+    margin: 5% auto;
+    padding: 1% 2%;
+    border: 1px solid #888;
+    width: 45%;
+}
+
+.modal-body {
+    display: grid;
+    grid-column-gap: 70px;
+}
+
+#reg-name-input {
+    grid-column-start: 1;
+    grid-column-end: 2;
+}
+
+#reg-username-input {
+    grid-column-start: 2;
+    grid-column-end: 2;
+}
+
+#reg-email-input {
+    grid-column-start: 1;
+    grid-column-end: 3;
+}
+
+#reg-password-input {
+    grid-column-start: 1;
+    grid-column-end: 2;
+}
+
+#reg-passwordconf-input {
+    grid-column-start: 2;
+    grid-column-end: 2;
+}
+
+.error {
+    display: inline;
+    color: #a94442;
+    background-color: #f2dede;
+    padding: 0.5rem;
+}
+
+.error-message {
+    display: inline;
+}
+
+.input-error-message {
+    color: red;
+    display: block;
+    font-size: 0.8em;
+    margin-top: 10px;
+}
+
+.input-error {
+    border-bottom-color: red;
+}
+
+.modal-header h3 {
+    margin-top: 0;
+}
+
+.modal-footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
+    justify-content: center;
+    padding: 0.5rem;
+    border-top: 1px solid #e9ecef;
+}
+
+.modal-default-button {
+    float: right;
+}
+
+/*
+   * The following styles are auto-applied to elements with
+   * transition="modal" when their visibility is toggled
+   * by Vue.js.
+   *
+   * You can easily play with the modal transition by editing
+   * these styles.
+   */
+
+.modal-enter {
+    opacity: 0;
+}
+
+.modal-leave-active {
+    opacity: 0;
+}
+
+.modal-enter .modal-container {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
+// .circle-map {
+//     padding: 20px 20px 20px 0;
+//     width: 400px;
+//     height: 400px;
+//     border-radius: 100%;
+//     margin-top: 90px;
+//     z-index: 0;
+//     position: relative;
+//     overflow: hidden;
+// }
 
